# youtube-stemmer

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  Makefile  README.md  README_MAC.md
.gemini/skills/gh-pipeline-analyzer/: SKILL.md
.gemini/skills/release-manager/: SKILL.md
.githooks/: pre-commit
.github/workflows/: build.yml  release.yml
backend/: Cargo.toml  Makefile  README.md  go.mod  go.sum  inspect_model.go  main.go  test_roundtrip.go  test_split.go  test_url.go  verify_bitrate.go
backend/archiving/: archiving.go  archiving_test.go
backend/audio/: audio.go
backend/dsp/: dsp.go  dsp_test.go
backend/mixing/: mixing.go  mixing_test.go
backend/models/: download_model.sh
backend/retrieval/: retrieval.go  retrieval_test.go
backend/src/: click_gen.rs  lib.rs  tempo.rs
backend/stemming/: stemming.go  stemming_test.go
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/advanced_models_20260308/: index.md  metadata.json  plan.md  spec.md
frontend/: README.md  pubspec.yaml
frontend/lib/: api_service.dart  backend_ffi.dart  export_service.dart  export_ui.dart  history_screen.dart  history_service.dart  log_service.dart  main.dart  metronome_service.dart  model_download_dialog.dart  model_downloader.dart  stem_player.dart
frontend/linux/: CMakeLists.txt
frontend/test/: api_service_test.dart  export_ui_test.dart  ffi_test.dart  history_service_test.dart  mixer_ui_test.dart  model_downloader_test.dart  theme_test.dart  ui_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
mockups/: code.html
scripts/: check_htdemucs_quality.py  dev_macos.sh  export_to_onnx.py  install.sh  install_launcher.sh  package.ps1  package.py  package.sh  run_export.sh  sync_version.py  uninstall.sh  upload_to_hf.py  youtube_stemmer.desktop.template
(+87 files in other folders)
