[package]
name = "backend"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "load-dynamic", "api-19", "ndarray"] }
symphonia = { version = "0.5", features = ["all-formats", "all-codecs"] }
hound = "3.5" # WAV writing
zip = "2.2"
once_cell = "1.19"
anyhow = "1.0"
ndarray = "0.17"
url = "2.5"
tokio = { version = "1.36", features = ["full"] }
ureq = { version = "2.9", features = ["json", "native-certs"] }
rubato = "0.16"

